src/main/java/com/example/JallowBooks/errors/NotAuthorizedException.java
package com.example.JallowBooks.errors;

public class NotAuthorizedException extends RuntimeException  {
    public NotAuthorizedException(String message) {
        super(message);
    }
}
